[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/Scripts/TextEdit.gd" type="Script" id=1]
[ext_resource path="res://fonts/roboto_regular_labels.tres" type="DynamicFont" id=2]
[ext_resource path="res://Interface/Scripts/Calculate_Button.gd" type="Script" id=3]
[ext_resource path="res://fonts/roboto_regular_textedit.tres" type="DynamicFont" id=4]

[node name="Input" type="MarginContainer"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 600 )
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 590.0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 370.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputData_Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 360.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/font = ExtResource( 2 )
text = "Введення даних"
align = 1
valign = 1

[node name="StartPoint_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 360.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/StartPoint_Container"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Початок інтервалу"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/StartPoint_Container"]
margin_left = 154.0
margin_right = 360.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Ввести дані..."
script = ExtResource( 1 )

[node name="EndPoint_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 360.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/EndPoint_Container"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Кінець інтервалу"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/EndPoint_Container"]
margin_left = 154.0
margin_right = 360.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Ввести дані..."
script = ExtResource( 1 )

[node name="Points_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 360.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Points_Container"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Кількість точок"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/Points_Container"]
margin_left = 154.0
margin_right = 360.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Ввести дані..."
script = ExtResource( 1 )

[node name="Function_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 360.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/Function_Container"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Функція"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/Function_Container"]
margin_left = 154.0
margin_right = 360.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "Ввести дані..."
script = ExtResource( 1 )

[node name="Calculate_Button" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
margin_left = 167.0
margin_top = 112.0
margin_right = 192.0
margin_bottom = 120.0
mouse_filter = 1
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Апроксимувати"
script = ExtResource( 3 )

[node name="MSE_Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 360.0
margin_bottom = 138.0
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 360.0
margin_bottom = 160.0

[node name="A_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 117.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/A_Container"]
margin_right = 1.0
margin_bottom = 2.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "A"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/A_Container"]
margin_left = 5.0
margin_right = 117.0
margin_bottom = 18.0
rect_min_size = Vector2( 40, 18 )
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
script = ExtResource( 1 )

[node name="B_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 121.0
margin_right = 238.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/B_Container"]
margin_right = 1.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "B"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/B_Container"]
margin_left = 5.0
margin_right = 117.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
script = ExtResource( 1 )

[node name="C_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 242.0
margin_right = 360.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/C_Container"]
margin_right = 1.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "C"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/C_Container"]
margin_left = 5.0
margin_right = 118.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
script = ExtResource( 1 )

[node name="MSE_Container" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 360.0
margin_bottom = 182.0
rect_min_size = Vector2( 0, 18 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/MSE_Container"]
margin_right = 150.0
margin_bottom = 18.0
rect_min_size = Vector2( 150, 18 )
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Квадратичне відхилення"
valign = 1

[node name="TextEdit" type="TextEdit" parent="Panel/MarginContainer/VBoxContainer/MSE_Container"]
margin_left = 154.0
margin_right = 360.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
readonly = true
script = ExtResource( 1 )

[node name="MSE_Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 186.0
margin_right = 360.0
margin_bottom = 200.0
align = 1

[node name="Points_Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 360.0
margin_bottom = 206.0
custom_fonts/font = ExtResource( 2 )
text = "Експериментальні та апроксимовані точки "
align = 1
valign = 1

[node name="TabContainer" type="TabContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 360.0
margin_bottom = 560.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Data" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0
margin_right = -8.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Data"]
margin_right = 352.0
margin_bottom = 314.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Approximation Data" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -316.0
margin_bottom = -294.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/TabContainer/Approximation Data"]
margin_right = 40.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/StartPoint_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/StartPoint_Container/TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer/StartPoint_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/StartPoint_Container/TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/EndPoint_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/EndPoint_Container/TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer/EndPoint_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/EndPoint_Container/TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/Points_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/Points_Container/TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer/Points_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/Points_Container/TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="focus_entered" from="Panel/MarginContainer/VBoxContainer/Function_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/Function_Container/TextEdit" method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Panel/MarginContainer/VBoxContainer/Function_Container/TextEdit" to="Panel/MarginContainer/VBoxContainer/Function_Container/TextEdit" method="_on_TextEdit_focus_exited"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Calculate_Button" to="Panel/MarginContainer/VBoxContainer/Calculate_Button" method="_on_Calculate_Button_pressed"]
